--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "ethers": "^6.0.8",
+    "framer-motion": "^10.0.1",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
