--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "joes-dashboard",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
+  "description": "Dashboard to try smart contract read and write",
+  "author": "Onkeljoe",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -12,6 +14,7 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@rainbow-me/rainbowkit": "^0.12.4",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
@@ -25,10 +28,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "superjson": "1.9.1",
+    "wagmi": "^0.12.6",
     "zod": "^3.20.6"
   },
   "devDependencies": {
-    "@rainbow-me/rainbowkit": "^0.12.4",
     "@types/eslint": "^8.21.1",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.28",
@@ -37,8 +40,7 @@
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.2.1",
-    "typescript": "^4.9.5",
-    "wagmi": "^0.12.6"
+    "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
     "initVersion": "7.5.9"
